--- a/BackgroundManagerUI/App.xaml
+++ b/BackgroundManagerUI/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="BackgroundManager.App"
+﻿<Application x:Class="BackgroundManagerUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:BackgroundManager"
+             xmlns:local="clr-namespace:BackgroundManagerUI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
