--- a/BackgroundManagerUI/MainWindow.xaml
+++ b/BackgroundManagerUI/MainWindow.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="BackgroundManager.MainWindow"
+﻿<Window x:Class="BackgroundManagerUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BackgroundManager"
+        xmlns:local="clr-namespace:BackgroundManagerUI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Closing="Window_Closing" StateChanged="Window_StateChanged">
+        Title="BackgroundManager - Settings" Height="450" Width="800" Closing="Window_Closing" StateChanged="Window_StateChanged" Closed="Window_Closed">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="*" />
