--- a/BackgroundManagerUI/UpdateNotifier.xaml
+++ b/BackgroundManagerUI/UpdateNotifier.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="BackgroundManager.UpdateNotifier"
+﻿<Window x:Class="BackgroundManagerUI.UpdateNotifier"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:BackgroundManager"
+        xmlns:local="clr-namespace:BackgroundManagerUI"
         mc:Ignorable="d"
-        Title="UpdateNotifier" Height="200" Width="350" ResizeMode="NoResize">
+        Title="BackgroundMgr - Update" Height="200" Width="350">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="2*" />
@@ -14,7 +14,7 @@
 
         <Grid Grid.Row="0" Margin="20,0,20,0">
             <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center">
-                The version you are running is outdatet.
+                The version you are running is outdated.
                 <LineBreak />
                 <LineBreak />
                 Would you like to download a newer version?
