--- a/BackgroundManagerUI/MainWindow.xaml
+++ b/BackgroundManagerUI/MainWindow.xaml
@@ -181,16 +181,58 @@
                 <!-- ******************************************************** -->
                 <TabItem Header="Settings">
                     <Grid Background="#FFE5E5E5">
-                        <StackPanel>
-                            <StackPanel Orientation="Horizontal" Margin="10">
+                        <DockPanel LastChildFill="True">
+                            <StackPanel DockPanel.Dock="Top" Orientation="Horizontal" Margin="10">
                                 <Label Content="Autostart" />
                                 <CheckBox IsChecked="{Binding IsAutostartEnabled}" VerticalAlignment="Center" />
                             </StackPanel>
-                            <DockPanel Margin="10">
+                            <DockPanel DockPanel.Dock="Top" Margin="10">
                                 <Label Content="Settings Path" Margin="0,0,10,0" />
                                 <TextBox Text="{Binding SettingsPath}" TextChanged="box_saveLocation_TextChanged" HorizontalAlignment="Stretch" />
                             </DockPanel>
-                        </StackPanel>
+
+                            <DockPanel DockPanel.Dock="Bottom" LastChildFill="True">
+
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="50"/>
+                                        <ColumnDefinition Width="*"/>
+                                    </Grid.ColumnDefinitions>
+
+                                    <Grid Grid.Column="0">
+                                        <ScrollViewer DockPanel.Dock="Top" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                                            <ListView x:Name="list_blackList_options" ItemsSource="{Binding AppBlacklistOptions}" KeyDown="list_blackListOptions_KeyDown" SelectionChanged="list_Path_SelectionChanged">
+                                                <ListView.View>
+                                                    <GridView>
+                                                        <GridViewColumn Header="Name"
+                                                                Width="Auto"
+                                                                DisplayMemberBinding="{Binding Name}" />
+                                                        <GridViewColumn Header="Started"
+                                                                Width="Auto"
+                                                                DisplayMemberBinding="{Binding StartTime}"/>
+                                                    </GridView>
+                                                </ListView.View>
+                                            </ListView>
+                                        </ScrollViewer>
+                                    </Grid>
+                                    <Grid Grid.Column="1">
+                                        <StackPanel VerticalAlignment="Center">
+                                            <Button Content="->" Margin="0,0,0,5" Click="btn_blackList_add_Click"/>
+                                            <Button Content="&lt;-" Margin="0,5,0,0" Click="btn_blackList_rm_Click"/>
+                                        </StackPanel>
+                                        
+                                    </Grid>
+                                    <Grid Grid.Column="2">
+                                        <ScrollViewer DockPanel.Dock="Top" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
+                                            <ListView x:Name="list_blackList_active" ItemsSource="{Binding AppBlacklist}" KeyDown="list_blackList_KeyDown" SelectionChanged="list_Path_SelectionChanged">
+                                            </ListView>
+                                        </ScrollViewer>
+                                    </Grid>
+                                </Grid>
+
+                            </DockPanel>
+                        </DockPanel>
                     </Grid>
                 </TabItem>
             </TabControl>
